--- a/flipkart/src/main/resources/config.properties
+++ b/flipkart/src/main/resources/config.properties
@@ -1,2 +1,4 @@
 browser_key webdriver.chrome.driver
 browser_value .\\src\\test\\resources\\drivers\\chromedriver.exe
+username 9948014893
+password rakesh111
