--- a/flipkart/src/main/resources/config.properties
+++ b/flipkart/src/main/resources/config.properties
@@ -2,3 +2,5 @@ browser_key webdriver.chrome.driver
 browser_value .\\src\\test\\resources\\drivers\\chromedriver.exe
 username 9948014893
 password rakesh111
+url https://www.flipkart.com/
+homepage Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books & More. Best Offers!
