--- a/flipkart/src/main/resources/config.properties
+++ b/flipkart/src/main/resources/config.properties
@@ -4,3 +4,4 @@ username 9948014893
 password rakesh111
 url https://www.flipkart.com/
 homepage Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books & More. Best Offers!
+cartpage Shopping Cart | Flipkart.com
